package dynamodb;

public class GroupDao {
}
