package dynamodb;
//

public class PlayerDao {

//    private final DynamoDB;
}
